syntax = "proto3";

package scrapper;

import "google/api/annotations.proto";

option go_package = "scrapper/api/proto/gen;gen";


service Scrapper {
  rpc RegisterChat(RegisterChatRequest) returns (RegisterChatResponse) {
    option (google.api.http) = {
      post: "/tg-chat/{id}"
    };
  }

  rpc DeleteChat(DeleteChatRequest) returns (DeleteChatResponse) {
    option (google.api.http) = {
      delete: "/tg-chat/{id}"
    };
  }

  rpc GetLinks(GetLinksRequest) returns (ListLinksResponse) {
    option (google.api.http) = {
      get: "/links"
    };
  }
  

  rpc AddLink(AddLinkRequest) returns (LinkResponse) {
    option (google.api.http) = {
      post: "/links"
      body: "*"
    };
  }
  

  rpc RemoveLink(RemoveLinkRequest) returns (LinkResponse) {
    option (google.api.http) = {
      delete: "/links"
    };
  }
    
}

message RegisterChatRequest {
  int64 id = 1;
}

message RegisterChatResponse {
  string message = 1;
}

message DeleteChatRequest {
  int64 id = 1;
}

message DeleteChatResponse {
  string message = 1;
}

message GetLinksRequest {
  int64 tg_chat_id = 1;
}

message AddLinkRequest {
  int64 tg_chat_id = 1;
  string link = 2;
  repeated string tags = 3;
  repeated string filters = 4;
}

message RemoveLinkRequest {
  int64 tg_chat_id = 1;
  string link = 2;
}

message LinkResponse {
  int64 id = 1;
  string url = 2;
  repeated string tags = 3;
  repeated string filters = 4;
}

message ListLinksResponse {
  repeated LinkResponse links = 1;
  int32 size = 2;
}

message ApiErrorResponse {
  string description = 1;
  string code = 2;
  string exception_name = 3;
  string exception_message = 4;
  repeated string stacktrace = 5;
}
